--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="wrapper">
                 <div class="header-sub">
                     <div class="logo">
-                        <img src="/assets/image/Bean Scene.png" alt="logo" />
+                        <img src="./assets/image/Bean Scene.png" alt="logo" />
                     </div>
                     <nav class="menu">
                         <ul class="menu-list">
