--- a/index.html
+++ b/index.html
@@ -54,5 +54,84 @@
                 </div>
             </div>
         </header>
+        <main>
+            <div class="wrapper">
+                <div class="intro">
+                    <div class="intro-content">
+                        <h2 class="container-title">Discover the best coffee</h2>
+                        <span class="container-desc">
+                            Bean Scene is a coffee shop that provides you with quality coffee that helps boost your productivity and helps build your mood. Having a cup of coffee is good, but having a cup of real coffee is greater. There is no doubt that you will enjoy this coffee more than others
+                            you have ever tasted. </span
+                        ><br />
+                        <div class="intro-button">
+                            <a href="#" class="btn">Learn more</a>
+                        </div>
+                    </div>
+                    <div class="intro-img">
+                        <img src="./assets/image/stylized-cup-coffee-out-coffee-beans-flat-lay 1.png" alt="stylized-cup-coffee" style="width: 100%" />
+                    </div>
+                </div>
+                <div class="list-coffee">
+                    <h2 class="container-title">Enjoy a new blend of coffee style</h2>
+                    <span class="container-desc">Explore all flavours of coffee with us. There is always a new cup worth experiencing</span>
+                    <div class="coffee-item">
+                        <div class="card">
+                            <div class="card-img">
+                                <img src="./assets/image/Rectangle 7.png" alt="iteam-avatar" />
+                            </div>
+                            <div class="card-content">
+                                <h3>Capuccino</h3>
+                                <span class="card-content-material">Coffee 50% | Milk 50%</span><br />
+                                <span class="card-content-price">$8.50</span>
+                            </div>
+                            <div class="card-button">
+                                <a href="#" class="btn">Order Now</a>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-img">
+                                <img src="./assets/image/Rectangle 9.png" alt="iteam-avatar" />
+                            </div>
+                            <div class="card-content">
+                                <h3>Capuccino</h3>
+                                <span class="card-content-material">Coffee 50% | Milk 50%</span><br />
+                                <span class="card-content-price">$8.50</span>
+                            </div>
+                            <div class="card-button">
+                                <a href="#" class="btn">Order Now</a>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-img">
+                                <img src="./assets/image/Rectangle 11.png" alt="iteam-avatar" />
+                            </div>
+                            <div class="card-content">
+                                <h3>Capuccino</h3>
+                                <span class="card-content-material">Coffee 50% | Milk 50%</span><br />
+                                <span class="card-content-price">$8.50</span>
+                            </div>
+                            <div class="card-button">
+                                <a href="#" class="btn">Order Now</a>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-img">
+                                <img src="./assets/image/Rectangle 13.png" alt="iteam-avatar" />
+                            </div>
+                            <div class="card-content">
+                                <h3>Capuccino</h3>
+                                <span class="card-content-material">Coffee 50% | Milk 50%</span><br />
+                                <span class="card-content-price">$8.50</span>
+                            </div>
+                            <div class="card-button">
+                                <a href="#" class="btn">Order Now</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <img src="./assets/image/coffee_blast.png" alt="coffee-blast" class="coffee-blast" />
+        </main>
     </body>
 </html>
