--- a/index.html
+++ b/index.html
@@ -129,9 +129,57 @@
                         </div>
                     </div>
                 </div>
+                <div class="advantage">
+                    <h2 class="container-title">Why are we different?</h2>
+                    <span class="container-desc">We don’t just make your coffee, we make your day!</span>
+                    <div class="advantage-list">
+                        <div class="advantage-card">
+                            <div class="advantage-icon"><img src="./assets/image/coffee-beans 1.png" alt="icon" /></div>
+                            <h3 class="advantage-title">Supreme Beans</h3>
+                            <span class="advantage-describe">Beans that provides great taste</span>
+                        </div>
+                        <div class="advantage-card">
+                            <div class="advantage-icon"><img src="./assets/image/badge 1.png" alt="icon" /></div>
+                            <h3 class="advantage-title">High Quality</h3>
+                            <span class="advantage-describe">We provide the highest quality</span>
+                        </div>
+                        <div class="advantage-card">
+                            <div class="advantage-icon"><img src="./assets/image/coffee-cup 1.png" alt="icon" /></div>
+                            <h3 class="advantage-title">Extraordinary</h3>
+                            <span class="advantage-describe">Coffee like you have never tasted</span>
+                        </div>
+                        <div class="advantage-card">
+                            <div class="advantage-icon"><img src="./assets/image/best-price 1.png" alt="icon" /></div>
+                            <h3 class="advantage-title">Affordable Price</h3>
+                            <span class="advantage-describe">Our Coffee prices are easy to afford</span>
+                        </div>
+                    </div>
+                    <span class="container-desc">Great ideas start with great coffee, Lets help you achieve that </span>
+                    <h2 class="container-title">Get started today.</h2>
+                    <div class="advantage-btn">
+                        <a href="#" class="btn">Join Us</a>
+                    </div>
+                </div>
             </div>
-
+            <div class="banner-second">
+                <div class="wrapper">
+                    <div class="banner-second__content">
+                        <h2 class="banner-second__title">Get a chance to have an Amazing morning</h2>
+                        <span class="banner-second__desc">We are giving you are one time opportunity to experience a better life with coffee.</span>
+                        <div class="banner-second__btn">
+                            <a href="#" class="btn">Order Now</a>
+                        </div>
+                    </div>
+                    <div class="banner-second__imgcup">
+                        <img src="/assets/image/cup.png" alt="cup-image" class="cup-img" />
+                    </div>
+                </div>
+                <div class="banner-second__coffeebean">
+                    <img src="/assets/image/coffee_bean.png" alt="bean" />
+                </div>
+            </div>
             <img src="./assets/image/coffee_blast.png" alt="coffee-blast" class="coffee-blast" />
+            <img src="./assets/image/coffee_blast (1).png" alt="coffee-blast" class="coffee-blast1" />
         </main>
     </body>
 </html>
