--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         <link rel="stylesheet" href="./assets/css/reset.css" />
         <link rel="stylesheet" href="./assets/css/base.css" />
         <link rel="stylesheet" href="./assets/css/index.css" />
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="./index.js"></script>
     </head>
     <body>
         <header>
@@ -171,12 +173,60 @@
                         </div>
                     </div>
                     <div class="banner-second__imgcup">
-                        <img src="/assets/image/cup.png" alt="cup-image" class="cup-img" />
+                        <img src="./assets/image/imagecup.png" alt="cup-image" />
                     </div>
                 </div>
                 <div class="banner-second__coffeebean">
-                    <img src="/assets/image/coffee_bean.png" alt="bean" />
+                    <img src="./assets/image/coffeebean2.png" alt="bean" />
                 </div>
+            </div>
+            <div class="feedback-section">
+                <div class="wrapper">
+                    <div class="feedback">
+                        <h2 class="container-title">Our coffee perfection feedback</h2>
+                        <span class="container-desc">Our customers has amazing things to say about us</span>
+                        <div class="feedback-container">
+                            <div class="feedback-content fade">
+                                <p>
+                                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived
+                                    not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset.....
+                                </p>
+                                <h3>Jonny Thomas</h3>
+                                <span>Project Manager</span>
+                                <div class="feedback-avatar">
+                                    <img src="./assets/image/avatar.png" alt="avatar" />
+                                </div>
+                            </div>
+                            <div class="feedback-content fade">
+                                <p>
+                                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived
+                                    not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown
+                                    printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries
+                                </p>
+                                <h3>Alexander-Arnold</h3>
+                                <span>Developer</span>
+                                <div class="feedback-avatar">
+                                    <img src="./assets/image/avatar3.png" alt="avatar" style="width: 112px; height: 112px" />
+                                </div>
+                            </div>
+                            <div class="feedback-content fade">
+                                <p>
+                                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived
+                                    not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged
+                                </p>
+                                <h3>Cristiano Ronaldo</h3>
+                                <span>Software Engineer</span>
+                                <div class="feedback-avatar">
+                                    <img src="./assets/image/avatar4.jpg" alt="avatar" style="width: 112px; height: 112px" />
+                                </div>
+                            </div>
+                            <div class="btn-prev" onclick="plusSlides(-1)"><img src="./assets/image/prev_icon.png" alt="next-icon" /></div>
+                            <div class="btn-next" onclick="plusSlides(1)"><img src="./assets/image/next_icon.png" alt="next-icon" /></div>
+                        </div>
+                    </div>
+                </div>
+                <img src="./assets/image/coffee_blast_feedback.png" alt="coffee-blast" class="coffee-blast__feedback" />
+                <img src="./assets/image/coffee_blast_feedback2.png" alt="coffee-blast" class="coffee-blast__feedback2" />
             </div>
             <img src="./assets/image/coffee_blast.png" alt="coffee-blast" class="coffee-blast" />
             <img src="./assets/image/coffee_blast (1).png" alt="coffee-blast" class="coffee-blast1" />
