--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css2?family=Clicker+Script&display=swap" rel="stylesheet" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link rel="stylesheet" href="./assets/css/reset.css" />
         <link rel="stylesheet" href="./assets/css/base.css" />
         <link rel="stylesheet" href="./assets/css/index.css" />
+
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="./index.js"></script>
     </head>
@@ -231,5 +233,62 @@
             <img src="./assets/image/coffee_blast.png" alt="coffee-blast" class="coffee-blast" />
             <img src="./assets/image/coffee_blast (1).png" alt="coffee-blast" class="coffee-blast1" />
         </main>
+        <div class="contract">
+            <div class="wrapper">
+                <div class="contract-container">
+                    <h2 class="container-title">Subscribe to get the Latest News</h2>
+                    <span class="container-desc">Don’t miss out on our latest news, updates, tips and special offers</span>
+                    <div class="contract-form">
+                        <input type="text" class="input-contract" placeholder="Enter your mail" />
+                        <button class="btn-subscribe">Subscribe</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <footer>
+            <img src="./assets/image/pngwing 1.png" alt="coffee-wing" class="coffee-wing1" />
+            <img src="./assets/image/pngwing 2.png" alt="coffee-wing" class="coffee-wing2" />
+            <div class="wrapper">
+                <div class="footer-container">
+                    <div class="footer-block">
+                        <div><img src="./assets/image/Bean Scene.png" alt="" /></div>
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                        <div class="footer-icon">
+                            <i class="fa-brands fa-facebook"></i>
+                            <i class="fa-brands fa-instagram"></i>
+                            <i class="fa-brands fa-youtube"></i>
+                            <i class="fa-brands fa-twitter"></i>
+                        </div>
+                    </div>
+                    <div class="footer-block">
+                        <h3>About</h3>
+                        <ul>
+                            <li>Menu</li>
+                            <li>Features</li>
+                            <li>News & Blogs</li>
+                            <li>Help & Supports</li>
+                        </ul>
+                    </div>
+                    <div class="footer-block">
+                        <h3>Company</h3>
+                        <ul>
+                            <li>How we work</li>
+                            <li>Terms of service</li>
+                            <li>Pricing</li>
+                            <li>FAQ</li>
+                        </ul>
+                    </div>
+                    <div class="footer-block">
+                        <h3>Contract Us</h3>
+                        <ul>
+                            <li>Akshya Nagar 1st Block 1st Cross, Rammurthy nagar, Bangalore-560016</li>
+                            <li>+1 202-918-2132</li>
+                            <li>beanscene@mail.com</li>
+                            <li>www.beanscene.com</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </footer>
     </body>
 </html>
